plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'org.citadel'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.1'
    testImplementation "org.mockito:mockito-core:3.+"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

test {
    useJUnitPlatform()
    useJUnit()
    testLogging.showStandardStreams = true
}
kotlin {
    jvmToolchain(21)
}